0031468: Visualization - add public interface to return embedding a single fallback font